[20241210] 서버반영 및 조회 프론트 페이지 작성, 소켓 연결